--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
